# Speedwagon

./: .buildinfo  .coveragerc  .dockerignore  .gitignore  .pylintrc  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CTestConfig.cmake  Dockerfile  HISTORY.rst  Jenkinsfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  advanced.html  api_reference.html  changelog.html  cli.html  console_mode.html  deployment.yml  development.html  documentation.url  extra_commands.py  faq.html  framework_users.html  genindex.html  getting_started.html  glossary.html  index.html  internal_digitization_workflow.html  make.bat  objects.inv  overview.html  py-modindex.html  pyproject.toml  pytest.ini  pyuic.json  (+19 more)
.doctrees/: advanced.doctree  api_reference.doctree  changelog.doctree  cli.doctree  console_mode.doctree  development.doctree  environment.pickle  faq.doctree  framework_users.doctree  getting_started.doctree  glossary.doctree  index.doctree  internal_digitization_workflow.doctree  overview.doctree  simplified_workflow.doctree  speedwagon_development.doctree  uiuc_workflows.doctree  use_cases.doctree  user.doctree  vendor_specs.doctree  workflows.doctree
.doctrees/configure/: custom_workflow.doctree
.doctrees/plugin_development/: arguments.doctree  configuration.doctree  develop_plugins.doctree  getting_started.doctree  getting_user_input_once_started.doctree  reports.doctree  tasks.doctree  workflow_configure.doctree
.doctrees/speedwagon/: speedwagon.config.doctree  speedwagon.doctree  speedwagon.reports.doctree  speedwagon.startup.doctree  speedwagon.tasks.doctree  speedwagon.validators.doctree  speedwagon.workflow.doctree  speedwagon.workflows.doctree
.doctrees/workflows/: converting_packages.doctree  generate.doctree  verifying.doctree
.github/workflows/: documentation.yml  tox_matrix.yml
_sources/: advanced.rst.txt  cli.rst.txt  development.rst.txt  faq.rst.txt  getting_started.rst.txt  glossary.rst.txt  index.rst.txt  internal_digitization_workflow.rst.txt  simplified_workflow.rst.txt  uiuc_workflows.rst.txt  user.rst.txt  vendor_specs.rst.txt  workflows.rst.txt
_sources/configure/: custom_workflow.rst.txt
_sources/plugin_development/: arguments.rst.txt  develop_plugins.rst.txt  getting_started.rst.txt  tasks.rst.txt  workflow_configure.rst.txt
_sources/speedwagon/: speedwagon.config.rst.txt  speedwagon.reports.rst.txt  speedwagon.tasks.rst.txt  speedwagon.validators.rst.txt  speedwagon.workflows.rst.txt
_sources/workflows/: converting_packages.rst.txt  generate.rst.txt  verifying.rst.txt
_static/: documentation_options.js
ci/: build_standalone.cmake  generate_pdf.bat
ci/jenkins/: plugins.txt
cmake/: ci.cmake.in  docs.wxs  jenkins.cmake  packaging.cmake  patch_wix.xml  python_functions.cmake  speedwagon.vbs  standalone.cmake
configure/: custom_workflow.html
contrib/: CHANGELOG.rst.jinja
docs/: make.bat
docs/source/: about.rst  advanced.rst  api_reference.rst  conf.py  console_mode.rst  create_workflow.rst  development.rst  faq.rst  framework_users.rst  getting_started.rst  glossary.rst  index.rst  overview.rst  simplified_workflow.rst  speedwagon_development.rst  uiuc_workflows.rst  use_cases.rst  workflows.rst
extra/: patch.xml
features/: toolOptionModel.feature  toolOptionModel2.feature  toolOptionModel3.feature
features/steps/: toolOptionModel.py  toolOptionModel2.py  toolOptionModel3.py
forseti/: __init__.py  __main__.py  about.py  finder.py  gui.py  job.py  jobs.py  models.py  processing.py  runner_strategies.py  tabs.py  tasks.py  tool.py  worker.py  workflow.py
forseti/tools/: __init__.py  abstool.py  absworkflow.py  completeness.py  (+18 more)
frames/: __init__.py  __main__.py  __version__.py  gui.py  tool.py  worker.py
packaging/: CPackConfig.cmake.in  Speedwagon.spec  create_osx_app_bundle.py  favicon.icns  hook-hathi_validate.py  hook-speedwagon.py  hook-uiucprescon.imagevalidate.py  speedwagon-bootstrap.py
plugin_development/: arguments.html  configuration.html  develop_plugins.html  getting_started.html  getting_user_input_once_started.html  reports.html  tasks.html  workflow_configure.html
requirements/: README  requirements-ci-freeze.txt  requirements-ci.txt  requirements-dev-freeze.txt  requirements-dev.in  requirements-dev.txt  requirements-devpi.txt  requirements-extra.txt  requirements-freeze.in  requirements-freeze.txt  requirements-gui-freeze.txt  requirements-gui.in  requirements-gui.txt  requirements-vendor-source.txt  requirements-vendor.txt  requirements.txt  requirements_tox.txt
speedwagon/: __init__.py  __main__.py  about.py  config.py  dialog.py  dialogbox.py  exceptions.py  gui.py  hookspecs.py  info.py  job.py  logging.py  logging_helpers.py  models.py  plugin_hook.py  plugins.py  reports.py  runner.py  runner_strategies.py  speedwagon.config.html  speedwagon.html  speedwagon.reports.html  speedwagon.startup.html  speedwagon.tasks.html  speedwagon.validators.html  speedwagon.workflow.html  speedwagon.workflows.html  startup.py  system_info.py  tabs.py  tasks.py  test_get_config.py  tool.py  ui_loader.py  utils.py  validators.py  widgets.py  worker.py  workflow.py
templates/: README.txt.in  shortcuts.wxs.in  speedwagon.bat.in  wix_start_menu.wvs.in
tests/: CMakeLists.txt  conftest.py  test_application_launcher.py  test_basic.py  test_config.py  test_custom_widgets.py  test_dialog.py  test_dialogs.py  test_get_config.py  test_gui.py  test_info.py  test_jobs.py  test_models.py  test_pkg_metadata.py  test_plugins.py  test_reports.py  test_runner_strategies.py  test_settingsModel.py  test_startup.py  test_tabs.py  test_tasks.py  test_title_page_selection.py  test_toolOptionsModule.py  test_tools.py  test_ui.py  test_utils.py  test_validators.py  test_widgets.py  test_worker.py  test_workflow.py
ui/: main_window.ui
utils/: upload_docs.py
vars/: runJenkinsPipeline.groovy
windows_build/: LICENSE.rtf  Product.wxs  build.ps1  build_msi.wixproj  build_release.bat  clean_release.bat  common.props  dlruntime.py  python.targets  release.pyproj
workflows/: converting_packages.html  generate.html  verifying.html
(+259 files in other folders)
