[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose -m \"not notFromSetupPy\""
norecursedirs = "thirdparty"
junit_family="xunit2"
markers=[
    "adapter",
    "slow: mark test as slow.",
    "model_data"
]

[tool.pydocstyle]
# Ignore files that end in _ui.py because they are machine generated
match="((?!test).*)(^(?!.*(ui)).*)\\.py"

[tool.mypy]
python_version = "3.11"
follow_imports_for_stubs=true
# incremental is problematic because of dependency ruamel.yaml
#incremental=false

[tool.ruff]
select = ["E", "F", "W"]
exclude = [
    "windows_build",
    "tests",
]
line-length = 79

[tool.ruff.pydocstyle]
convention = "google"

#match = "((?!test).*)(^(?!.*(ui)).*)\\.py"