[project]
name = "speedwagon"
version = "0.4.0b10"
description = "Collection of tools and workflows for DS"
maintainers = [
    { name="Henry Borchers", email="hborcher@illinois.edu" }
]
authors = [
    {name="University Library at The University of Illinois at Urbana Champaign: Preservation Services", email="prescons@library.illinois.edu"}
]
requires-python = ">=3.9"
license = { file="LICENSE"}
dependencies =[
    "pyyaml",
    'importlib-metadata;python_version<"3.10"',
    'typing-extensions;python_version<"3.11"',
    'lxml',
    "requests",
    "pluggy>=1.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: University of Illinois/NCSA Open Source License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ['GUI']
readme = { file= "README.rst", content-type="text/x-rst" }

[project.urls]
project = "https://www.library.illinois.edu/dccdocs/speedwagon"
download = "https://github.com/UIUCLibrary/Speedwagon/releases"

[project.optional-dependencies]
QT = ["PySide6~=6.8"]

[project.gui-scripts]
speedwagon = "speedwagon.__main__:main"
sw-tab-editor = "speedwagon.startup:standalone_tab_editor"

[tool.setuptools]
include-package-data = true
packages=[
    "speedwagon",
    "speedwagon.config",
    "speedwagon.frontend",
    "speedwagon.frontend.cli",
    "speedwagon.frontend.qtwidgets",
    "speedwagon.frontend.qtwidgets.dialog",
    "speedwagon.frontend.qtwidgets.models",
    "speedwagon.frontend.qtwidgets.ui",
    "speedwagon.tasks",
    "speedwagon.workflows",
]

[tool.setuptools.package-data]
speedwagon = ["favicon.ico", "logo.png", 'py.typed']
"speedwagon.frontend.qtwidgets.ui" = [
     "console.ui",
     "main_window3.ui",
     "main_window_shell.ui",
     "plugin_settings.ui",
     "select_workflow_widget.ui",
     'setup_job.ui',
     "tab_editor.ui",
     "workflow_progress.ui",
     "workspace.ui",
 ]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
changelog_start_rev = "0.2.2"
changelog_file="CHANGELOG.rst"
template="contrib/CHANGELOG.rst.jinja"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose -m \"not notFromSetupPy\""
norecursedirs = "thirdparty"
junit_family="xunit2"
markers=[
    "adapter",
    "slow: mark test as slow.",
    "model_data"
]
filterwarnings = [
    # https://github.com/pytest-dev/pytest-qt/issues/558
    "ignore:Failed to disconnect .* from signal:RuntimeWarning",
]

[tool.pydocstyle]
# Ignore files that end in _ui.py because they are machine generated
match="((?!test).*)(^(?!.*(ui)).*)\\.py"

[tool.mypy]
python_version = "3.11"
follow_imports_for_stubs=true
# incremental is problematic because of dependency ruamel.yaml
#incremental=false

[tool.ruff]

exclude = [
    "packaging",
    "utils",
    "docs/source",
    "tests",
]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "W", "D", "B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

#match = "((?!test).*)(^(?!.*(ui)).*)\\.py"
[tool.black]
line-length = 79

[tool.nuitka]
