[metadata]
name = forseti
version = 0.1.0
url = http://www.library.illinois.edu/dccdocs/forseti
download_url = https://github.com/UIUCLibrary/Forseti
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Collection of tools and workflows for DS
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
license_file = LICENSE
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: University of Illinois/NCSA Open Source License

[options]
zip_safe = False
python_requires = >=3.6

[tool:pytest]
testpaths = tests
addopts = --verbose -m "not notFromSetupPy"
norecursedirs = thirdparty

[mypy]
python_version = 3.6
ignore_missing_imports = True

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[sdist]
formats = zip,gztar