[metadata]
name = speedwagon
version = 0.2.0.b6
url = http://www.library.illinois.edu/dccdocs/speedwagon
download_url = https://github.com/UIUCLibrary/Speedwagon/releases
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Collection of tools and workflows for DS
long_description = file: README.rst
long_description_content_type = text/x-rst
license = University of Illinois/NCSA Open Source License
license_files = LICENSE
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: University of Illinois/NCSA Open Source License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
keywords = GUI

[options]
zip_safe = False
python_requires = >=3.7

[aliases]
test = pytest

[build_sphinx]
source_dir = docs/source
build_dir = build/docs
all_files = 1

[flake8]
exclude =
    speedwagon/ui
